<resources>
    <string name="app_name">BionetSample</string>
    <string name="schedule_title">Dars jadvali</string>
    <string name="home_title">Asosiy</string>
    <string name="scores_title">Baholar</string>

    <string name="choose_region">Viloyatni tanlang</string>
    <string name="choose_school_type">O\'quv muassasasi turini tanlang</string>
    <string name="choose_school">O\'quv muassasasini tanlang</string>
    <string name="choose_group">Sinfni tanlang</string>
    <string name="choose_student">Farzandingizni tanlang</string>
    <string name="enter_student_id">Talaba ID raqamini kiriting</string>
    <string name="error_fill_this_blank">To\'ldiring.</string>
    <string name="error_wrong_student_id">Xato ID raqami.</string>
    <string name="enter_phone_number">Telefon raqamingizni kiriting.</string>
    <string name="login">Kirish</string>
    <string name="register">Ro\'yxatdan o\'tish</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dialog_title">B I O N E T</string>
    <string name="ok">Ok</string>
    <string name="network_error">Iltimos internetga ulanib, qaytadan urinib ko\'ring.</string>

</resources>